--- a/src/style/cache-picker.css
+++ b/src/style/cache-picker.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   margin: 0;
   background: #131119;
   font-family: sans-serif;
@@ -128,4 +128,4 @@ nav:hover .navitem:nth-of-type(10) {
 }
 nav:hover .navitem:nth-of-type(10) i {
   transition: all 0.2s, margin-left 0.2s 0.5s;
-}
+}*/
